# boxedin

./: pyproject.toml
designs/: admin.py  factories.py  fields.py  forms.py  models.py  sizes.py  test_config_field.py  test_configurations.py  test_font_views.py  test_form_fields.py  test_models.py  test_sizes.py  test_views.py  urls.py  views.py
designs/migrations/: 0001_initial.py  0002_design_config_design_template_designrender.py  0003_use_config_field.py  0004_remove_design_config_designconfiguration.py
designs/templates/designs/: base.html  collection_detail.html  collection_list.html  design_detail.html  font_list.html
designs/templates/designs/widgets/: config_widget.html
designs/templatetags/: markdown_extras.py
project/: settings.py  urls.py
