[project]
name = "boxedin"
version = "0.1.0"
description = "A service for generating images from structured sports data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.3.0",
    "cattrs>=25.1.1",
    "django>=5.2.3",
    "django-markdownfield>=0.11.0",
    "packaging>=23.2",
]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "factory-boy>=3.3.3",
    "django-test-plus>=2.2.4",
]

[tool.setuptools]
packages = ["designs", "project"]

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["py313", "py312", "py311"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
dependency_groups = ["dev"]
commands = [
    ["coverage", "run", "manage.py", "test", "-v2"],
]
